Fix collapse arrow on profile page Closes #43

--- a/views/partials/genre-carousel.ejs
+++ b/views/partials/genre-carousel.ejs
@@ -1,6 +1,7 @@
 <section class="genre-carousel">
     <h2>
         <%= genre %>
+        <% genre = (genre === "Saved Movies") ? "saved-movies" : genre %>
         <button
             data-toggle="collapse"
             data-expanded="true"
