Added '-<genre>' to movie ids
This differentiates them from the duplicate movie panels on the page. This still
needs to be hooked up in the javascript so that the buttons work properly.

--- a/views/partials/genre-carousel.ejs
+++ b/views/partials/genre-carousel.ejs
@@ -33,7 +33,7 @@
                     <div class="row">
 
 <%          group.forEach(function (movie) { %>
-<%-           include('../partials/movie-panel', { user: user, movie: movie, watchOptions: watchOptions }); %>
+<%-           include('../partials/movie-panel', { user: user, movie: movie, genre: genre, watchOptions: watchOptions }); %>
 <%          }); %>
 
                     </div>
