--- a/views/partials/movie-panel.ejs
+++ b/views/partials/movie-panel.ejs
@@ -4,27 +4,27 @@
         <div class="movie-panel-overlay">
             <h3><a href="/movie/<%= movie._id %>"><%= movie.title %></a></h3>
                 <% if (user && watchOptions !== undefined) { %>
-                    <div class="col-md-12 collapse in" id="save-button-div-<%= movie._id %>" data-toggle="collapse">
-                        <button class="btn btn-primary save-button" data-id="<%= movie._id %>">Save</button>
+                    <div class="col-md-12 collapse in" id="save-button-div-<%= movie._id %>-<%= genre %>" data-toggle="collapse">
+                        <button class="btn btn-primary save-button" data-id="<%= movie._id %>-<%= genre %>">Save</button>
                     </div>
-                    <div class="col-md-12 collapse" id="watched-buttons-<%= movie._id %>" data-toggle="collapse">
+                    <div class="col-md-12 collapse" id="watched-buttons-<%= movie._id %>-<%= genre %>" data-toggle="collapse">
                         <button
                             class="btn btn-default watched-btn"
-                            data-id="<%= movie._id %>"
+                            data-id="<%= movie._id %>-<%= genre %>"
                             data-state="<%= watchOptions.notWatched %>"
                         >Have not watched</button>
                         <button
                             class="btn btn-primary watched-btn"
-                            data-id="<%= movie._id %>"
+                            data-id="<%= movie._id %>-<%= genre %>"
                             data-state="<%= watchOptions.watched %>"
                         >Have watched</button>
                         <button
                             class="btn btn-warning watched-btn"
-                            data-id="<%= movie._id %>"
+                            data-id="<%= movie._id %>-<%= genre %>"
                             data-state="<%= watchOptions.willNotWatch %>"
                         >Will not watch</button>
                     </div>
-                    <div class="col-md-12 collapse" id="rate-<%= movie._id %>" data-toggle="collapse">
+                    <div class="col-md-12 collapse" id="rate-<%= movie._id %>-<%= genre %>" data-toggle="collapse">
                         <form>
                             <div class="row">
                                 <label for="rating" class="form-control-label col-md-12">Rating</label>
@@ -40,10 +40,10 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <button type="button" data-id="<%= movie._id %>" class="btn btn-success save-rating-btn">Save</button>
+                                    <button type="button" data-id="<%= movie._id %>-<%= genre %>" class="btn btn-success save-rating-btn">Save</button>
                                 </div>
                                 <div class="col-md-6">
-                                    <button type="button" data-id="<%= movie._id %>" class="btn btn-warning cancel-rating-btn">Cancel</button>
+                                    <button type="button" data-id="<%= movie._id %>-<%= genre %>" class="btn btn-warning cancel-rating-btn">Cancel</button>
                                 </div>
                             </div>
                         </form>
