Create toast-like alerts
Calling `Ghetto.alert(message, options)` spawns a toast-like alert that
slides from the top, off the screen, down over the main view.

Alerts' timeout (duration), level (bootstrap class/color), and ability
to be dismissed manually can be configured via `options`.

--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -6,6 +6,7 @@
         if (!window.jQuery) { document.write('<script src="/assets/js/jquery.js"><\/script>'); }
     </script>
     <script src="/assets/js/movies.js"></script>
+    <script src="/assets/js/alert.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="/assets/vendor/js/bootstrap.min.js"></script>
