--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,6 +2,30 @@ body {
     background-color: #34495e;
 }
 
+html {
+    padding: 0 10px;
+}
+
 p, h1, h2, h3, h4 {
     color: #ecf0f1;
+}
+
+.ghetto-alert-container {
+    position: fixed;
+    width: calc(100% - 50px);
+    top: 0;
+    height: 100px;
+}
+
+.ghetto-alert {
+    position: relative;
+    width: fit-content;
+    margin: 0 auto;
+    z-index: 100;
+}
+
+.ghetto-alert span {
+    vertical-align: middle;
+    line-height: 1.5;
+    margin-left: 10px;
 }
