--- a/views/pages/movie.ejs
+++ b/views/pages/movie.ejs
@@ -8,6 +8,14 @@
 
 <body class="container-fluid">
     <%- include('../partials/nav', { user: user }); %>
+    <%
+        var rating = 0;
+        var count = 0;
+        movie.userVotes.forEach(function (user) {
+            rating += user.rating;
+            count++;
+        });
+    %>
     <div class="row">
         <div class="col-md-6 text-center">
             <h2><%= movie.title %></h2>
@@ -26,7 +34,7 @@
                 <h3>Critic Rating</h3>
                 <p><%= movie.criticRating %>/10</p>
                 <h3>User Rating</h3>
-                <p><%= (movie.userVotes === 0) ? '-' : Math.round((movie.userTotalRating / movie.userVotes) * 10) / 10 %>/10</p>
+                <p><%= (count === 0) ? '-' : Math.round((rating / count) * 10) / 10 %>/10</p>
             </div>
         </div>
     </div>
