Corrected errors regarding labels
Added `aria-label` to all elements lacking a real label.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,9 +12,9 @@
     <h2><%= pageHeader %></h2>
     <section class="container-fluid">
         <form class="input-group" method="post" action="/search">
-            <input type="text" name="search" id="search" class="form-control" placeholder="Search..." />
+            <input type="text" name="search" aria-label="Search" id="search" class="form-control" placeholder="Search..." />
             <span class="input-group-btn">
-                <button type="submit" class="btn btn-secondary">
+                <button type="submit" class="btn btn-secondary" aria-label="Search Button">
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                 </button>
             </span>
