--- a/views/partials/genre-carousel.ejs
+++ b/views/partials/genre-carousel.ejs
@@ -7,6 +7,7 @@
             data-expanded="true"
             data-target="#movie-carousel-<%= genre %>"
             class="expand-button btn-collapse"
+            aria-label="Collapse Genre"
         ><span class="caret"></span></button>
     </h2>
 
