Fixed heading order for My Movies Page
Movie title had been an h4 without an h3 on the page, this also needed an update
to it's css rule as it was targeting an h4.

--- a/static/css/mymovies.css
+++ b/static/css/mymovies.css
@@ -2,7 +2,7 @@
 
 /* For Movie Update Containers */
 
-.updateAttributes { 
+.updateAttributes {
     margin-bottom: 20px;
     background-color: #fff;
     color: #34495e;
@@ -15,7 +15,7 @@
 }
 
 /* Title */
-.updateAttributes .movie-attr h4.title {
+.updateAttributes .movie-attr .title {
     display: inline;
     padding-right: 10px;
     color: #34495e;
