--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,7 @@
 <head>
     <% include ../partials/head %>
     <link type="text/css" rel="stylesheet" href="/assets/css/index.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/css/movie-panel.css" />
     <link type="text/css" rel="stylesheet" href="/assets/css/form.css" />
 </head>
 
