--- a/views/pages/submitMovie.ejs
+++ b/views/pages/submitMovie.ejs
@@ -6,9 +6,10 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/form.css" />
 </head>
 
-<body>
-    <div class="container-fluid">
-        <% include ../partials/nav %>
+<body class="container-fluid">
+    <% include ../partials/nav %>
+
+    <main class="container col-md-offset-4 col-md-4">
         <h2>Submit</h2>
         <form class="form-horizontal" action="/api/movies/submit" method="POST">
             <div class="form-group row">
@@ -24,12 +25,13 @@
                 </div>
             </div>
             <div class="form-group row">
-                <div class="col-sm-2">
-                    <button class="btn btn-default" type="submit">Submit</button>
+                <div class="col-sm-offset-2 col-sm-2">
+                    <button class="btn btn-primary" type="submit">Submit</button>
                 </div>
             </div>
         </form>
-    </div>
+    </main>
+
     <% include ../partials/scripts %>
 </body>
 
