--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -42,3 +42,12 @@ h2 {
 h3 {
     font-size: 20px;
 }
+
+.carousel-control {
+    opacity: 1;
+}
+
+.btn-primary,
+.btn-primary:hover {
+    color: #000;
+}
