Lots of Minor HTML Validation Fixes

--- a/views/pages/settings.ejs
+++ b/views/pages/settings.ejs
@@ -10,7 +10,7 @@
     <div class="container-fluid">
         <% include ../partials/nav %>
         <h2>Settings</h2>
-        <form class="form-horizontal" id="edit-form" action="/api/user/update" method="POST" data-toggle="validator" role="form">
+        <form class="form-horizontal" id="edit-form" action="/api/user/update" method="POST" data-toggle="validator">
             <div class="form-group row">
                 <label for="profileText" class="col-sm-2 form-control-label">Profile Text</label>
                 <div class="col-sm-10">
