--- a/views/partials/movie-panel.ejs
+++ b/views/partials/movie-panel.ejs
@@ -27,7 +27,7 @@
                     <div class="col-md-12 collapse" id="rate-<%= movie._id %>_<%= genre %>" data-toggle="collapse">
                         <form>
                             <div class="row">
-                                <label for="rating" class="form-control-label col-md-12">Rating</label>
+                                <label for="rating-<%= movie._id %>_<%= genre %>" class="form-control-label col-md-12">Rating</label>
                             </div>
                             <div class="row">
                                 <div class="col-md-5">
