Fixed a thing I broke last commit, lol
The individual movie page, I accidentally added another `%>` in the wrong place
breaking the display of the genres.

--- a/views/pages/movie.ejs
+++ b/views/pages/movie.ejs
@@ -26,7 +26,7 @@
                 <h3>Synopsis</h3>
                 <p><%= movie.description %></p>
                 <h3>Genre</h3>
-                <p><%= movie.genre %>.join(', ') %></p>
+                <p><%= movie.genre.join(', ') %></p>
                 <h3>Actors</h3>
                 <p><%= movie.actors %></p>
                 <h3>Director</h3>
