:crystal_ball: Style up the 'My Movies' view
Make each movie-attributes element more responsive and include more
information (because it can fit, so why not).

'Remove from My Movies' should be a red button because it's dangerous.

--- a/views/pages/myMovies.ejs
+++ b/views/pages/myMovies.ejs
@@ -8,10 +8,13 @@
 
 <body class="container-fluid">
     <% include ../partials/nav %>
-    <h2>My Movies</h2>
-    <% movies.forEach(function(movie){ %>
-        <% include ../partials/movie-attributes %>
-    <% }) %>
+
+    <main class="container">
+        <h2>My Movies</h2>
+        <% movies.forEach(function(movie){ %>
+            <% include ../partials/movie-attributes %>
+        <% }) %>
+    </main>
 
     <% include ../partials/scripts %>
 </body>
