--- a/views/pages/settings.ejs
+++ b/views/pages/settings.ejs
@@ -6,9 +6,10 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/form.css" />
 </head>
 
-<body>
-    <div class="container-fluid">
-        <% include ../partials/nav %>
+<body class="container-fluid">
+    <% include ../partials/nav %>
+
+    <main class="container">
         <h2>Settings</h2>
         <form class="form-horizontal" id="edit-form" action="/api/user/update" method="POST" data-toggle="validator">
             <div class="form-group row">
@@ -45,12 +46,12 @@
                 </div>
             </div>
             <div class="form-group row">
-                <div class="col-sm-2">
-                    <button class="btn btn-default" type="submit">Save</button>
+                <div class="col-sm-2 col-sm-offset-2">
+                    <button class="btn btn-primary" type="submit">Save</button>
                 </div>
             </div>
         </form>
-    </div>
+    </main>
     <% include ../partials/scripts %>
 </body>
 
