Conditionally render based on the user's featured movie
If the user has a featured movie, render it. Otherwise, render a
message indicating the absence.

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -75,6 +75,10 @@ label[for="featured-movie"] {
     width: 100%;
 }
 
+#featured-movie {
+    text-align: center;
+}
+
 #featured-movie.movie-panel,
 #featured-movie.movie-panel img {
     padding: 0;
