--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,6 +21,7 @@ p, h1, h2, h3, h4 {
 .ghetto-alert {
     position: relative;
     width: fit-content;
+    width: -moz-fit-content;
     margin: 0 auto;
     z-index: 100;
 }
